[package]
name = "async-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linkme = "*"
smol = "*"
hyperpipe = { git = "https://github.com/cognivore/hyperpipe.git" }
async-task = "*"
futures-lite = "*"
inotify = "*"
flume = "*"
